tests/ui/rfcs/rfc-0000-never_patterns/120240-async-fn-never-arg.stderr
error[E0308]: mismatched types
  --> $DIR/120240-async-fn-never-arg.rs:11:36
   |
LL | async fn async_never(!: Void) -> ! {} // gives an error
   |                                    ^^ expected `!`, found `()`
   |
   = note:   expected type `!`
           found unit type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
